# ImpulseManager

./: README.md  manage.py  pyproject.toml
ImpulseManager/: asgi.py  settings.py  urls.py  wsgi.py
JobViewer/: apps.py  models.py  views.py
templates/JobViewer/: pages.html
